[workspace]
members = [
    "near-sdk",
    "near-sdk-macros",
    "near-sdk-sim",
    "near-contract-standards",
    "sys",
]
exclude = ["examples/"]

# Special triple # comment for ci.
[patch.crates-io]
### borsh = { git = "https://github.com/near/borsh-rs", branch = "master" }
### near-vm-logic = { git = "https://github.com/near/nearcore", branch = "master" }
### near-primitives-core = { git = "https://github.com/near/nearcore", branch = "master" }

[patch.crates-io.schemars]
git = "https://github.com/Seatlab-dev/schemars.git"
rev = "57ffb49"

[patch.crates-io.okapi]
git = "https://github.com/Seatlab-dev/okapi.git"
rev = "8d842d7"
